--- a/MNMSolutions.DAL/MNMSolutions.DAL.csproj
+++ b/MNMSolutions.DAL/MNMSolutions.DAL.csproj
@@ -168,6 +168,8 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ProductList.cs" />
+    <Compile Include="Models\Product\NewProduct.cs" />
+    <Compile Include="Models\Sales\Order\OrderHeader.cs" />
     <Compile Include="Models\TotalSalesForTheDay.cs" />
     <Compile Include="DB\Test\Category.cs" />
     <Compile Include="DB\Test\Customer.cs" />
