--- a/MNMSolutions.DAL/MNMSolutions.DAL.csproj
+++ b/MNMSolutions.DAL/MNMSolutions.DAL.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLL\Product\ProductList.cs" />
     <Compile Include="DB\Dev\AspNetRole.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -194,7 +195,9 @@
     <Compile Include="Repository\Repository.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="BLL\" />
+    <Folder Include="BLL\Sales\Order\computation\" />
+    <Folder Include="BLL\Sales\Order\detail\" />
+    <Folder Include="BLL\Sales\Order\header\" />
     <Folder Include="DB\Models\SalesOrder\" />
   </ItemGroup>
   <ItemGroup>
