--- a/MNMSolutions.Web.Api/MNMSolutions.Web.Api.csproj
+++ b/MNMSolutions.Web.Api/MNMSolutions.Web.Api.csproj
@@ -202,6 +202,7 @@
     <Compile Include="Controllers\Inventory\SalesOrderDetailsController.cs" />
     <Compile Include="Controllers\Inventory\spOrderHeaderController.cs" />
     <Compile Include="Controllers\Inventory\View_InventoryController.cs" />
+    <Compile Include="Controllers\Product\ProductListController.cs" />
     <Compile Include="Controllers\Product\View_ProductController.cs" />
     <Compile Include="Controllers\Result.cs" />
     <Compile Include="Controllers\SalesOrder\SalesOrderHeadersController.cs" />
